--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,4 +1,117 @@
-.menu{
-    display: flex;
-    width: 100%;
+    .menu {
+        display: flex;
+        width: 100%;
+        position: fixed;
+        align-items: center;
+        justify-content: center;
+        height: 80px;
+        gap: 20px;
+        z-index: 999;
+        background-color: #011422;
+        box-shadow: 0px 3px 20px #0000007c;
+    }
+
+    .s1 {
+        background-color: #ffffff;
+        color: #011422;
+        height: 100vh;
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+        gap: 20px;
+    }
+
+    .left {
+        width: 400px;
+        height: 400px;
+        border-radius: 100%;
+        overflow: hidden;
+        box-shadow: 0px 3px 20px #0000007c;
+    }
+
+    .imgPerfil {
+        width: 400px;
+        height: 400px;
+        transition: all 200ms ease-in-out;
+        object-fit: cover;
+    }
+
+    .imgPerfil:hover {
+        transform: scale(1.1);
+    }
+
+    .right {
+        width: 500px;
+    }
+
+    .title {
+        font-size: 36px;
+        font-weight: bold;
+    }
+
+    .paragraph {
+        font-size: 22px;
+    }
+
+    .rodape {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: black;
+        border-top: 2px solid navy;
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        height: 80px;
+        gap: 20px;
+    }
+
+    .rodape a {
+        transition: all 0.5s ease-in-out;
+        border-radius: 999px;
+        overflow: hidden;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .rodape a img {
+        transition: all 0.5s ease-in-out;
+    }
+
+    .rodape a:hover {
+        transform: translateY(-15px) scale(1.3);
+    }
+
+    .rodape a:hover img {
+        transform: rotate(360deg);
+    }
+
+main {
+  padding-bottom: 80px;
 }
+
+
+    @media (width <=768px) {
+        .s1 {
+            padding-top: 50px;
+            gap: 0;
+        }
+
+        .left {
+            width: 300px;
+            height: 300px;
+        }
+
+        .imgPerfil {
+            width: 300px;
+            height: 300px;
+        }
+
+        .right {
+            padding: 20px;
+            margin-top: -150px;
+        }
+    }
